<resources>
    <string name="app_name">20220905_girumlemu_nycschools</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="school_name">School Name</string>
    <string name="sat_takers">SAT Takers:</string>
    <string name="avg_math">Avg Math:</string>
    <string name="avg_writing">Avg Writing:</string>
    <string name="avg_reading">Avg Reading:</string>
</resources>